--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-<h1>HELLO My Name is Zach Carpenter </h1>
+
+    <html lang="en" dir="ltr">
+      <head>
+        <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&family=Mulish:wght@400;700;800&display=swap" rel="stylesheet">
+        <title>About Zach Carpenter</title>
+        <style>
+        body{
+          background-image: url("Background_Image_M.JPG");
+          background-size: cover;
+        }
+
+        #header{
+          width: 104%;
+          margin-left:-40px;
+          margin-top:-10px;
+          height: 50px;
+          background-color: #ffffff;
+        }
+
+          #menu{
+            display: table-cell;
+                  width: 1500px;
+                  height: 50px;
+                  text-align: center;
+                  vertical-align: middle;
+
+                }
+
+          #nav-ul{
+                  margin: 0;
+                  Padding: 0;
+                  list-style-type: none;
+                }
+
+        .nav, a {
+                      display: table-cell;
+                      width: 300px;
+                      height: 50px;
+                      text-align: center;
+                      vertical-align: middle;
+                    }
+          a{
+                    text-decoration: none;
+                    color: #000000;
+                    font-size: 140%
+                  }
+          a:hover{
+                  background-color: #999;
+                  border-radius: 0px
+                }
+
+    #name{
+      font-size: 2em;
+      text-align: right;
+      margin-right: 10px;
+    }
+
+        </style>
+
+      </head>
+
+          <body>
+            <div id="header">
+              <nav id="menu">
+                <ul id="nav-ul">
+                <li class="nav"><a href="index.html">Home</a></li>
+                <li class="nav"><a href="resume.html">Experience</a></li>
+                <li class="nav"><a href="relevant_courses.html">Relevant Courses</a></li>
+                <li class="nav"><a href="bio.html">About Me</a></li>
+                <li class="nav"><a href="skills.html">Skills</a></li>
+                <li class="nav">zach.carp.co at gmail.com</li>
+                <li class="nav" id="name"><b>Zach Carpenter</b></li>
+              </ul>
+            </nav>
+              </div>
+
+        <div id="main">
+
+            <div style=" text-align: center; background-color: #ffffff; height: 100px; width: 1500px; margin-left: -10px; margin-top: -54px;">
+              <h1 style=" font-size: 5em;"> Zach Carpenter</h1>
+            </div>
+
+
+            </div>
+
+
+
+      </body>
+    </html>
