--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
     <html lang="en" dir="ltr">
       <head>
+        <meta name="google-site-verification" content="CwBRkHQTE66xXc_KyRuGLwCxXf13fN7VsnU1-5QR088" />
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&family=Mulish:wght@400;700;800&display=swap" rel="stylesheet">
         <title>About Zach Carpenter</title>
