--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 
       </head>
 
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMSXRGMS22"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RMSXRGMS22');
+      </script>
+
           <body>
             <div id="header">
               <nav id="menu">
