--- a/relevant_courses.html
+++ b/relevant_courses.html
@@ -11,10 +11,11 @@
 
     #header{
       width: 104%;
-      margin-left:-40px;
+      margin-left:-30px;
       margin-top:-10px;
       height: 50px;
       background-color: #ffffff;
+
     }
 
       #menu{
@@ -48,6 +49,10 @@
               background-color: #999;
               border-radius: 0px
             }
+            ul {
+    text-align: center;
+    list-style-position: inside;
+}
 
 #name{
   font-size: 2em;
@@ -77,7 +82,7 @@
     <div id="main">
 
         <div style=" text-align: center;">
-          <img style= "width:200px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
+          <img style= "width:300px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
           <h1>Relevant Courses</h1>
           <ul>
             <li>Foundations of Management and Entreprenurship</li>
