--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     #header{
       width: 104%;
-      margin-left:-40px;
+      margin-left:-30px;
       margin-top:-10px;
       height: 50px;
       background-color: #ffffff;
@@ -49,6 +49,11 @@
               border-radius: 0px
             }
 
+            ul {
+    text-align: left;
+    list-style-position: inside;
+}
+
 #name{
   font-size: 2em;
   text-align: right;
@@ -77,20 +82,48 @@
     <div id="main">
 
         <div style=" text-align: center;">
-          <img style= "width:200px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
+          <img style= "width:300px;float:right;text-align:right;margin-right: 10px; margin-left: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
           <h1>Zach Carpenter</h1>
-          <h2>Boulder, CO</h2>
-          <h3>Work Experience</h3>
-          <ul>
-            <li>Uplight</li>
-            <li>SafeKey</li>
-            <li>Ben and Jerry's</li>
-          </ul>
-          <h3>Education</h3>
-          <ul>
-            <li>Babson College</li>
-            <li>Boulder High School</li>
-          </ul>
+          <p><b>Boulder, CO</b></p>
+          <h2>Work Experience</h2>
+
+            <h3>Uplight</h3>
+            <ul>
+              <li>Analyzed and created new marketing metrics and benchmarks for the consumer marketing team</li>
+              <li>Worked with clients and internal team creating client specific reports and deploying marketing content packages</li>
+              <li>Facilitated cross functional collaboration between teammates, other departments, and clients for timely and accurate delivery of schedules, data, and content</li>
+            </ul>
+            <h3>SafeKey</h3>
+            <ul>
+            <li>Started business with 14 other students for Foundations in Management and Entrepreneurship class and was selected out of 56 teams to present to incoming students about our business </li>
+            <li>In charge of finding and negotiating with manufacturers, handling and recording inventory, and making the vision of the product come to life </li>
+            <li>Executed 30 weekly meetings to evaluate team member performance and task completion. </li>
+            </ul>
+            <h3>Ben and Jerry's</h3>
+            <ul>
+              <li>Managed a shift of 6 employees including delegating responsibilities, training new employees and shift managers, and managing inventory and shipments</li>
+              <li>Handled closing and opening the shop, including cash reconciliation</li>
+              <li>Lead a high pressure environment requiring work with urgency and quality customer service for high volumes</li>
+            </ul>
+<div style= " text-align: center; margin-right: 320px;" >
+
+
+          <h2>Education</h2>
+            <h3>Babson College</h3>
+            <ul>
+              <li>3.84 GPA</li>
+              <li>Pursueing a Bachelor of Science in Business Administration</li>
+              <li>Concentrating in Strategy and Consulting</li>
+              <li>Member of Babson College Varsity Ski Team</li>
+              <li>Member of Babson Sports Business Socioty</li>
+            </ul>
+            <h3>Boulder High School</h3>
+            <ul>
+              <li>4.3 GPA</li>
+              <li>Colorado Seal of Biliteracy recipiant (Spanish)</li>
+              <li>Business Pathways Certificate recipiant</li>
+            </ul>
+            </div>
         </div>
 
 
