--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 
     #header{
       width: 104%;
-      margin-left:-40px;
+      margin-left:-30px;
       margin-top:-10px;
       height: 50px;
       background-color: #ffffff;
@@ -49,6 +49,11 @@
               border-radius: 0px
             }
 
+            ul {
+    text-align: left;
+    list-style-position: inside;
+  }
+
 #name{
   font-size: 2em;
   text-align: right;
@@ -77,12 +82,31 @@
     <div id="main">
 
         <div style=" text-align: center;">
-          <img style= "width:200px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
-          <h1>Zach Carpenter</h1>
-          <h2>Boulder, CO</h2>
-          <h3>Work Experience</h3>
-          <h3>Education</h3>
-          <h3>Skills</h3>
+          <img style= "width:300px;float:right;text-align:right;margin-right: 10px; margin-left: 10px; margin-top: 20px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
+<div style= "width: 400px; float: left; margin-left: 70px; font-size: 1.2em;">
+          <h1>Proficient in</h1>
+          <ul>
+            <li>Minitab</li>
+            <li>Excel</li>
+            <li>PowerPoint</li>
+            <li>Tableau</li>
+            <li>Google Analytics</li>
+            <li>Access</li>
+            <li>Word</li>
+            <li>@Risk</li>
+            <li>Salesforce Marketing Cloud</li>
+            <li>Jira</li>
+            <li>Spanish</li>
+          </ul>
+        </div>
+      <div style= "width: 400px; float: right; margin-right:90px; font-size: 1.2em;">
+        <h1>Experience in</h1>
+          <ul>
+            <li>HTML</li>
+            <li>Salesforce Commerce Cloud</li>
+            <li>Python</li>
+            <li>R Studio</li>
+          </ul>
         </div>
 
 
