--- a/relevant_courses.html
+++ b/relevant_courses.html
@@ -50,8 +50,9 @@
               border-radius: 0px
             }
             ul {
-    text-align: center;
+    text-align: left;
     list-style-position: inside;
+
 }
 
 #name{
@@ -72,7 +73,7 @@
             <li class="nav"><a href="resume.html">Experience</a></li>
             <li class="nav"><a href="relevant_courses.html">Relevant Courses</a></li>
             <li class="nav"><a href="bio.html">About Me</a></li>
-            <li class="nav"><a href="relevant_courses.html">Skills</a></li>
+            <li class="nav"><a href="skills.html">Skills</a></li>
             <li class="nav">zach.carp.co at gmail.com</li>
             <li class="nav" id="name"><b>Zach Carpenter</b></li>
           </ul>
@@ -81,9 +82,9 @@
 
     <div id="main">
 
-        <div style=" text-align: center;">
+        <div style=" text-align: center;font-size: 1.5em;">
           <img style= "width:300px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
-          <h1>Relevant Courses</h1>
+          <h1 style="font-size:1.4em;">Relevant Courses</h1>
           <ul>
             <li>Foundations of Management and Entreprenurship</li>
             <li>Foundations of Business Analytics</li>
