--- a/relevant_courses.html
+++ b/relevant_courses.html
@@ -95,6 +95,7 @@
             <li>Technology and Business Innovation</li>
             <li>Macroeconomics</li>
             <li>Microeconomics</li>
+            <li>Energy and the Enviorment</li>
           </ul>
         </div>
 
