--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         #header{
           width: 110%;
           margin-left:-30px;
+          margin-right: -20px;
           margin-top:-10px;
           height: 50px;
           background-color: #ffffff;
