--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         }
 
         #header{
-          width: 110%;
+          width: 104%;
           margin-left:-30px;
-          margin-right: -20px;
           margin-top:-10px;
           height: 50px;
           background-color: #ffffff;
@@ -89,7 +88,7 @@
 
         <div id="main">
 
-            <div style=" text-align: center; background-color: #ffffff; height: 100px; width: 1500px; margin-left: -10px; margin-top: -54px;">
+            <div style=" text-align: center; background-color: #ffffff; height: 100px; width: 1500px; margin-left: -10px; margin-top: -54px; margin-right: -10px;">
               <h1 style=" font-size: 5em;"> Zach Carpenter</h1>
             </div>
 
