--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         #header{
-          width: 104%;
+          width: 103%;
           margin-left:-30px;
           margin-top:-10px;
           height: 50px;
@@ -88,7 +88,7 @@
 
         <div id="main">
 
-            <div style=" text-align: center; background-color: #ffffff; height: 100px; width: 1500px; margin-left: -10px; margin-top: -54px; margin-right: -10px;">
+            <div style=" text-align: center; background-color: #ffffff; height: 100px; width: 1500px; margin-left: -10px; margin-top: -54px; ">
               <h1 style=" font-size: 5em;"> Zach Carpenter</h1>
             </div>
 
